Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-node
 labels:
   app: hello-node
spec:
 replicas: 1
 selector:
   matchLabels:
     app: hello-node
 template:
   metadata:
     labels:
       app: hello-node
   spec:
     containers:
     - name: node
       image: public.ecr.aws/u2q1a2y8/soon-node-docker-ecr-20240422:latest
       ports:
       - containerPort: 3000
